# django_guide

./: Taskfile.yaml  pyproject.toml
book_store/: db.sqlite3
book_store/book_outlet/: models.py  views.py
book_store/book_outlet/migrations/: 0001_initial.py  0002_book_author_book_is_bestselling_alter_book_rating.py  0003_book_slug.py
book_store/book_outlet/templates/book_outlet/: book_detail.html  index.html
book_store/book_store/: settings.py  urls.py
monthly_challenges/challenges/: urls.py  views.py
monthly_challenges/challenges/templates/challenges/: challenge.html  index.html
monthly_challenges/monthly_challenges/: settings.py  urls.py
monthly_challenges/templates/: 404.html  base.html
my_site/blog/: urls.py  views.py
my_site/blog/static/blog/: index.css
my_site/blog/templates/blog/: all-posts.html  index.html  post-detail.html
my_site/my_site/: settings.py  urls.py
my_site/templates/: 404.html  base.html
mypage/mypage/: settings.py
