[tool.poetry]
name = "django-guide"
version = "0.1.0"
description = "Lessons done during the 'Python Django - The Practical Guide' course"
authors = ["Erick Cardenas <erick.mendez@toptal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
